# playground

./: .gitignore  .gitmodules  CMakeLists.txt  LeoQuadState.mcap  README.md  build.zsh  configure.zsh  install.zsh  pl.mcap
cmake/: DebugUtil.cmake  GetDirectoryName.cmake
include/: print_header.h
test_abseil/: CMakeLists.txt  test_abseil.cpp
test_allocator/: test_allocator.cpp
test_assert/: CMakeLists.txt  test_assert.cpp
test_atomic/: CMakeLists.txt  test_atomic_0.cpp  test_atomic_1.cpp  test_atomic_2.cpp  test_atomic_3.cpp  test_atomic_4.cpp  test_atomic_6.cpp  test_atomic_7.cpp
test_attribute/: CMakeLists.txt  main.cpp
test_avx/: CMakeLists.txt  intrin.sh  test_avx.cpp
test_backtrace/: CMakeLists.txt  test_backtrace.cpp
test_bind/: CMakeLists.txt  test_bind.cpp
test_cachemiss/: dtTimeCheck.cpp  dtTimeCheck.h  test_cachemiss.cpp
test_callback/: test_callback.cpp
test_capnproto/: CMakeLists.txt  myproto.capnp.c++  myproto.capnp.h  test_capnproto.cpp
test_capnproto/proto/: myproto.capnp
test_chrono/: CMakeLists.txt  test_chrono.cpp
test_cmdarg/: CMakeLists.txt  cmdopts.hpp  test_cmdarg.cpp
test_console/: CMakeLists.txt  test_console.cpp
test_const/: CMakeLists.txt  test_const.cpp
test_constexpr/: CMakeLists.txt  test_constexpr.cpp
test_cpp11/: main.cpp
test_dtmath/: CMakeLists.txt  main.cpp
test_ebimu/: CMakeLists.txt  ebImuV5.h  evImuV5.cpp  test_ebimu.cpp
test_enumclass/: test_enumclass.cpp
test_forward/: CMakeLists.txt  test_forward.cpp
test_glog/: CMakeLists.txt  test_glog.cpp
test_gridmap/: CMakeLists.txt  gridMap.h  gridMap.ipp  gridMapBoxIterator.hpp  gridMapCircleIterator.hpp  gridMapIterator.h  gridMapIterator.hpp  gridMapIterator.ipp  test_gridmap.cpp
test_hdf5/: CMakeLists.txt  test_hdf5.cpp
test_hfsm2/: CMakeLists.txt  test_hfsm2.cpp
test_hfsm2/hfsm2/: machine.hpp
test_iterator/: test_iterator.cpp
test_joyPs4/: CMakeLists.txt  joyPs4Input.cpp  joyPs4Input.h  test_joyPs4.cpp
test_jsoncpp/: CMakeLists.txt  test_jsoncpp.cpp
test_keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.h  test_keyboard_1.cpp  test_keyboard_2.cpp
test_keyboard_SDL2/: CMakeLists.txt  key.h  test_keyboard.cpp
test_mcap/: CMakeLists.txt  LeoQuad.pb.cc  LeoQuad.pb.h  test_mcap.cpp  test_mcap_reader.cpp  test_mcap_writer.cpp
test_mcap/foxglove/: ArrowPrimitive.pb.h  CameraCalibration.pb.h  CircleAnnotation.pb.h  Color.pb.h  CompressedImage.pb.h  CompressedVideo.pb.cc  CompressedVideo.pb.h  CubePrimitive.pb.h  CylinderPrimitive.pb.h  FrameTransform.pb.h  FrameTransforms.pb.cc  FrameTransforms.pb.h  GeoJSON.pb.h  Grid.pb.h  ImageAnnotations.pb.cc  ImageAnnotations.pb.h  KeyValuePair.pb.h  LaserScan.pb.h  LinePrimitive.pb.h  LocationFix.pb.cc  LocationFix.pb.h  Log.pb.h  ModelPrimitive.pb.h  PackedElementField.pb.h  Point2.pb.h  Point3.pb.h  PointCloud.pb.h  PointsAnnotation.pb.h  Pose.pb.h  PoseInFrame.pb.h  PosesInFrame.pb.h  Quaternion.pb.h  RawImage.pb.h  SceneEntity.pb.h  SceneEntityDeletion.pb.h  SceneUpdate.pb.h  SpherePrimitive.pb.h  TextAnnotation.pb.cc  TextAnnotation.pb.h  TextPrimitive.pb.h  (+3 more)
test_metaprogram/: CMakeLists.txt  test_metaprogram.cpp
test_move/: test_move.cpp
test_move_constructor/: CMakeLists.txt  test_move_constructor.cpp
test_multi_io_select/: CMakeLists.txt  test_fread.cpp  test_fwrite.cpp
test_namespace/: test_namespace.cpp
test_nan/: test_nan.cpp
test_ncurses/: CMakeLists.txt  test_ncurses.cpp
test_ostream/: test_ostream.cpp
test_predicate/: test_predicate.cpp
test_pthread/: CMakeLists.txt  test_pthread.cpp
test_pybind11/: CMakeLists.txt  setup.py  test_pybind11.cpp  test_pybind11_module.cpp
test_pybind11/test_pybind11_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_quill/: CMakeLists.txt  test_quill.cpp
test_quill_stream/: CMakeLists.txt  test_quill_stream.cpp
test_rvalueref/: test_rvalueref.cpp
test_serial/: test_serial.cpp
test_smartptr/: CMakeLists.txt  my_vector.h  simple_cache.h  test_smartptr.cpp  test_smartptr_simplecache.cpp
test_sorted_list/: test_sorted_list.cpp
test_spdlog/: CMakeLists.txt  test_spdlog.cpp
test_spdlog_stream/: CMakeLists.txt  test_spdlog_stream.cpp
test_string_view/: CMakeLists.txt  test_string_view.cpp
test_tclap/: CMakeLists.txt  test_tclap.cpp
test_template/: accum.hpp  test_template.cpp
test_template_stringlit/: CMakeLists.txt  test_template_stringlit.cpp
test_term/: CMakeLists.txt  dhTerm.h  dtTerm.cpp  test_term.cpp
test_termcolor/: CMakeLists.txt  test_termcolor.cpp
test_type_traits/: CMakeLists.txt  test_type_traits.cpp
test_unique_ptr/: CMakeLists.txt  test_unique_ptr.cpp
test_var_args/: CMakeLists.txt  test_var_args.cpp  test_var_args_2.cpp  test_var_args_3.cpp  test_var_args_4.cpp  test_var_args_5.cpp
test_watch/: CMakeLists.txt  test_watch.cpp
test_yaml-cpp/: CMakeLists.txt  test.yaml  test_yaml-cpp.cpp
